[gd_scene load_steps=9 format=3 uid="uid://b3q8ug0ni4qy"]

[ext_resource type="Script" uid="uid://iwgx7doowuyo" path="res://mod_loader/plugin_view.gd" id="1_2m3t4"]
[ext_resource type="Texture2D" uid="uid://dyqg17edvfyeu" path="res://mod_loader/barcode-qr.svg" id="1_d0mw5"]
[ext_resource type="Texture2D" uid="uid://djwxn7vryb5p6" path="res://icon/file-edit-fill.png" id="3_deftf"]
[ext_resource type="Texture2D" uid="uid://dfg0jeb4yjdab" path="res://icon/delete-bin-2-fill.png" id="4_761ju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbsse"]
bg_color = Color(0.856067, 0.856067, 0.856067, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hiafm"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dobyq"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqw3t"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PanelContainer" type="PanelContainer"]
offset_right = 404.0
offset_bottom = 86.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hbsse")
script = ExtResource("1_2m3t4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_d0mw5")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="name" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "插件名字"

[node name="edit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_hiafm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_hiafm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hiafm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hiafm")
theme_override_styles/normal = SubResource("StyleBoxFlat_hiafm")
icon = ExtResource("3_deftf")
expand_icon = true

[node name="delete" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_dobyq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bqw3t")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqw3t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqw3t")
theme_override_styles/normal = SubResource("StyleBoxFlat_bqw3t")
icon = ExtResource("4_761ju")
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="introduction" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍插件介绍"
autowrap_mode = 3

[node name="confirm" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "删除"
initial_position = 1
ok_button_text = "确定"
dialog_text = "确定删除插件吗?"
cancel_button_text = "取消"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="confirm" to="." method="_on_confirm_confirmed"]
